
2003-02-13  Trey Matteson  <trey@apple.com>

	First checkin for working forms autocomplete.

	This level mostly just has glue to go from app to WC through the bridge.
	WebHTMLReo exports some new SPI to get the element of a view, and then to get
	some HTML-level properties of that element.

        Reviewed by Chris

        * Bookmarks.subproj/WebBookmarkGroup.m:
        (-[WebBookmarkGroup _saveBookmarkGroupGuts]):  Don't dump entire bookmark
	dict in the log.
        * WebKit.exp:  New class used by app, objc_class_name_WebHTMLRepresentation.
        * WebView.subproj/WebHTMLRepresentation.h:
        * WebView.subproj/WebHTMLRepresentation.m:
        (-[WebHTMLRepresentation elementForView:]):  New SPI.
        (-[WebHTMLRepresentation elementDoesAutoComplete:]):  New SPI.
        (-[WebHTMLRepresentation elementIsInLoginForm:]):  New SPI.

2003-02-13  Chris Blumenberg  <cblu@apple.com>

	Fixed WebKit typos found by Peter Wilson.

        Reviewed by darin.

        * Misc.subproj/WebKitErrors.h:
        * Misc.subproj/WebKitErrors.m:
        (categoryInitialize): Error should be WebErrorDescriptionCannotFindApplicationForURL not WebErrorDescriptionCannotNotFindApplicationForURL
        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:]): call findOrCreateFrameNamed
        * Plugins.subproj/WebPluginController.m:
        (-[WebPluginController showURL:inFrame:]): call findOrCreateFrameNamed
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge findOrCreateFrameNamed:]): call findOrCreateFrameNamed
        * WebView.subproj/WebFrame.h:
        * WebView.subproj/WebFrame.m:
        (-[WebFrame findOrCreateFrameNamed:]): fixed name
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _continueAfterNavigationPolicy:]): use WebErrorDescriptionCannotFindApplicationForURL
        * WebView.subproj/WebMainResourceClient.m: